[gd_scene load_steps=20 format=2]

[ext_resource path="res://Enemies/Slime.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Slime.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.0853, 4.94417 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 0, 26, 26, 26 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 26, 26, 26, 26 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 52, 26, 26, 26 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 78, 26, 26, 26 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 104, 26, 26, 26 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 130, 26, 26, 26 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 156, 26, 26, 26 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 104, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 130, 0, 26, 26 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "death",
"speed": 8.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "death"

[sub_resource type="Animation" id=3]
resource_name = "default"

[node name="Slime" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.37458, -5.05678 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.12373, -13.2975 )
frames = SubResource( 17 )
animation = "walk"
frame = 5
playing = true

[node name="Area2D" type="Area2D" parent="." groups=[
"enemy",
"hittable",
]]
position = Vector2( 0.749153, -1.49831 )
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.12373, -3.62097 )
shape = SubResource( 1 )

[node name="RayCastFront" type="RayCast2D" parent="."]
position = Vector2( 8.64864, -5.25966 )
enabled = true
cast_to = Vector2( 5, 0 )

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2( 8.83593, -3.76135 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 2 )
anims/default = SubResource( 3 )

[node name="StopTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
